@@ -50,6 +50,8 @@
        (Stefan Fuhrmann)
 - NEW: A warning is shown if the user tries to add a file that was versioned
        but renamed in case. (Stefan)
+- NEW: TortoiseMerge scrolls the views automatically when selecting with
+       the left mouse button down. (Stefan)
 - CHG: The bug-ID column width in the log dialog is now limited 
        to 200 pixels. (Stefan)
 - CHG: The right-drag context menu now only shows "Export" if a versioned
